--- a/index.html
+++ b/index.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Tampa Bay CS Association</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tampa Bay CS Club - Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Tampa Bay CS Association (TBCSA)</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="officers.html">Officers</a>
-      <a href="schedule.html">Schedule</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="register.html">Register</a>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="officers.html">Officers</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="registration.html">Registration</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section>
-      <h2>Our Mission</h2>
-      <p>
-        Tampa Bay CS Association (TBCSA) empowers students to explore computer science through hands‑on workshops,
-        collaborative projects, and mentorship. We make technical education accessible and fun, preparing members for
-        competitions, careers, and lifelong learning.
-      </p>
-    </section>
+    <main>
+        <section class="hero">
+            <h1>Welcome to Tampa Bay CS Club</h1>
+            <p>Empowering the next generation of computer scientists in the Tampa Bay area.</p>
+        </section>
 
-    <section>
-      <h2>Highlights & Recent Events</h2>
-      <ul>
-        <li><strong>USACO Training Series</strong> — Feb 15, 2025 (beginner → Bronze)</li>
-        <li><strong>Intro to Practical AI</strong> — Jan 21, 2025</li>
-        <li><strong>Cryptography Fundamentals</strong> — Nov 10, 2024</li>
-        <li><strong>Basic Web Development Workshop</strong> — Oct 22, 2024</li>
-      </ul>
-    </section>
+        <section class="mission">
+            <h2>Our Mission</h2>
+            <p>At the Tampa Bay CS Club (TBCSC), we are dedicated to teaching and mentoring underprivileged students in the Tampa Bay area in computer science. We believe that access to education in fields like artificial intelligence, cryptography, and web development should not be determined by socioeconomic status. Our goal is to make computer science more accessible and to equip the next generation with the skills they need to succeed in an increasingly digital world.</p>
+        </section>
 
-    <section>
-      <h2>Quick Links</h2>
-      <p><a href="schedule.html">Full seminar schedule & slides</a> • <a href="register.html">Join TBCSA</a> • <a href="gallery.html">Event photos</a></p>
-    </section>
-  </main>
+        <section class="programs">
+            <h2>What We Do</h2>
+            <ul>
+                <li>
+                    <h3>USACO Training</h3>
+                    <p>We provide comprehensive training for students to excel in the USA Computing Olympiad (USACO), helping them develop critical problem-solving and programming skills.</p>
+                </li>
+                <li>
+                    <h3>Tech Webinars</h3>
+                    <p>We host webinars on cutting-edge tech topics like AI, cryptography, and basic web development, providing students with insights into current industry trends and skills.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Tampa Bay CS Club. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
