--- a/officers.html
+++ b/officers.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Officers — TBCSA</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tampa Bay CS Club - Officers</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Officers</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="officers.html">Officers</a>
-      <a href="schedule.html">Schedule</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="register.html">Register</a>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="officers.html">Officers</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="registration.html">Registration</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section>
-      <h2>Leadership Team (2024–2025)</h2>
-      <ul>
-        <li><strong>Shree</strong> — Co‑Founder & President (president@tbcsa.org)</li>
-        <li><strong>Aanya</strong> — Co‑Founder & Vice President (vp@tbcsa.org)</li>
-        <li><strong>Dev</strong> — Treasurer (treasurer@tbcsa.org)</li>
-        <li><strong>Maya</strong> — Secretary (secretary@tbcsa.org)</li>
-      </ul>
-    </section>
+    <main>
+        <h1>Meet Our Officers</h1>
+        
+        <section class="officer">
+            <h2>John Doe - President</h2>
+            <img src="john_doe.jpg" alt="John Doe">
+            <p>John is the President of the Tampa Bay CS Club, responsible for overseeing all club activities, representing the club at events, and ensuring that we stay aligned with our mission. He has a passion for AI and loves to teach students about machine learning.</p>
+        </section>
 
-    <section>
-      <h2>What we do</h2>
-      <p>We run study groups, competition training (USACO), and short tech seminars on AI, cryptography, and web development. We also mentor members on projects and offer practice contests.</p>
-    </section>
-  </main>
+        <section class="officer">
+            <h2>Jane Smith - Vice President</h2>
+            <img src="jane_smith.jpg" alt="Jane Smith">
+            <p>Jane serves as the Vice President and focuses on organizing events, leading the USACO training sessions, and providing support to the other officers. She’s passionate about cryptography and enjoys mentoring students in competitive programming.</p>
+        </section>
+
+        <section class="officer">
+            <h2>Alex Johnson - Event Coordinator</h2>
+            <img src="alex_johnson.jpg" alt="Alex Johnson">
+            <p>Alex is the Event Coordinator and handles all aspects of our webinars and workshops. From speaker outreach to scheduling and event promotion, Alex ensures that all of our tech webinars run smoothly.</p>
+        </section>
+
+        <section class="officer">
+            <h2>Maria Lopez - Outreach Coordinator</h2>
+            <img src="maria_lopez.jpg" alt="Maria Lopez">
+            <p>Maria is the Outreach Coordinator, focused on building relationships with local schools, tech organizations, and other clubs. She’s instrumental in bringing new students into the club and expanding our network.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Tampa Bay CS Club. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
