--- a/events.html
+++ b/events.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-        <h1>Our Events</h1>
+        <h1 class="center-heading">Our Events</h1>
 
         <section class="event">
             <h2>AI and Cryptography Workshop</h2>
