--- a/officers.html
+++ b/officers.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-        <h1>Meet Our Officers</h1>
+        <h1 class="center-heading">Meet Our Officers</h1>
         
         <section class="officer">
             <h2>John Doe - President</h2>
