--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section class="mission">
             <h2>Our Mission</h2>
-            <p>At the Tampa Bay CS Club (TBCSC), we are dedicated to teaching and mentoring underprivileged students in the Tampa Bay area in computer science. We believe that access to education in fields like artificial intelligence, cryptography, and web development should not be determined by socioeconomic status. Our goal is to make computer science more accessible and to equip the next generation with the skills they need to succeed in an increasingly digital world.</p>
+            <p>At Tampa Bay CS Club (TBCSC), our mission is to provide underprivileged students in the Tampa Bay area with opportunities to explore the world of computer science. We believe that technology has the power to change lives, and we aim to equip students with the skills to succeed in a tech-driven future. Through hands-on programming workshops, mentorship, and collaboration, we help students develop the technical skills they need to excel in both academics and their future careers. Our club offers specialized training in competitive programming and cutting-edge topics like AI and web development, ensuring that students are prepared for the challenges of tomorrow's tech landscape. Ultimately, we strive to create a diverse, inclusive community where students from all backgrounds can thrive and pursue careers in technology.</p>
         </section>
 
         <section class="programs">
@@ -34,11 +34,11 @@
             <ul>
                 <li>
                     <h3>USACO Training</h3>
-                    <p>We provide comprehensive training for students to excel in the USA Computing Olympiad (USACO), helping them develop critical problem-solving and programming skills.</p>
+                    <p>We offer dedicated training for the USA Computing Olympiad (USACO), where students learn key problem-solving techniques and algorithms. Our program supports students from beginner to advanced levels, helping them improve their coding skills and prepare for competitive challenges. USACO participation builds both technical abilities and critical thinking, empowering students to pursue careers in tech.</p>
                 </li>
                 <li>
                     <h3>Tech Webinars</h3>
-                    <p>We host webinars on cutting-edge tech topics like AI, cryptography, and basic web development, providing students with insights into current industry trends and skills.</p>
+                    <p>Our tech webinars cover a wide range of topics, including artificial intelligence (AI), cryptography, and basic web development. Led by industry professionals, these sessions provide valuable insights and practical knowledge of cutting-edge technologies. Students gain a deeper understanding of the tech world and learn how to apply these concepts in real-world scenarios.</p>
                 </li>
             </ul>
         </section>
