--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 
         <section class="programs">
             <h2>What We Do</h2>
-            <ul>
-                <li>
+            <div class="programs-container">
+                <div class="program-card">
                     <h3>USACO Training</h3>
                     <p>We offer dedicated training for the USA Computing Olympiad (USACO), where students learn key problem-solving techniques and algorithms. Our program supports students from beginner to advanced levels, helping them improve their coding skills and prepare for competitive challenges. USACO participation builds both technical abilities and critical thinking, empowering students to pursue careers in tech.</p>
-                </li>
-                <li>
+                </div>
+                <div class="program-card">
                     <h3>Tech Webinars</h3>
                     <p>Our tech webinars cover a wide range of topics, including artificial intelligence (AI), cryptography, and basic web development. Led by industry professionals, these sessions provide valuable insights and practical knowledge of cutting-edge technologies. Students gain a deeper understanding of the tech world and learn how to apply these concepts in real-world scenarios.</p>
-                </li>
-            </ul>
+                </div>
+            </div>
         </section>
     </main>
 
