--- a/registration.html
+++ b/registration.html
@@ -20,7 +20,7 @@
 
     <main>
         <h1 class="center-heading">Register for Tampa Bay CS Club</h1>
-        <p class="center-heading">Fill out the form below to join our club or register for an event.</p>
+        <p style="text-align: center">Fill out the form below to join our club or register for an event.</p>
 
         <iframe src="YOUR_GOOGLE_FORM_URL_HERE" width="640" height="850" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </main>
