--- a/officers.html
+++ b/officers.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <nav>
+            <div class="logo">
+                <a href="index.html">Tampa Bay CS Club</a>
+            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="officers.html">Officers</a></li>
@@ -20,34 +24,34 @@
 
     <main>
         <h1 class="center-heading">Meet Our Officers</h1>
-        
-        <section class="officer">
-            <h2>John Doe - President</h2>
-            <img src="john_doe.jpg" alt="John Doe">
-            <p>John is the President of the Tampa Bay CS Club, responsible for overseeing all club activities, representing the club at events, and ensuring that we stay aligned with our mission. He has a passion for AI and loves to teach students about machine learning.</p>
-        </section>
 
-        <section class="officer">
-            <h2>Jane Smith - Vice President</h2>
-            <img src="jane_smith.jpg" alt="Jane Smith">
-            <p>Jane serves as the Vice President and focuses on organizing events, leading the USACO training sessions, and providing support to the other officers. She’s passionate about cryptography and enjoys mentoring students in competitive programming.</p>
-        </section>
-
-        <section class="officer">
-            <h2>Alex Johnson - Event Coordinator</h2>
-            <img src="alex_johnson.jpg" alt="Alex Johnson">
-            <p>Alex is the Event Coordinator and handles all aspects of our webinars and workshops. From speaker outreach to scheduling and event promotion, Alex ensures that all of our tech webinars run smoothly.</p>
-        </section>
-
-        <section class="officer">
-            <h2>Maria Lopez - Outreach Coordinator</h2>
-            <img src="maria_lopez.jpg" alt="Maria Lopez">
-            <p>Maria is the Outreach Coordinator, focused on building relationships with local schools, tech organizations, and other clubs. She’s instrumental in bringing new students into the club and expanding our network.</p>
-        </section>
+        <div class="officer-container">
+            <div class="officer-card">
+                <img src="john_doe.jpg" alt="John Doe">
+                <h3>John Doe - President</h3>
+                <p>John leads our club, focusing on AI and mentoring students in competitive programming.</p>
+            </div>
+            <div class="officer-card">
+                <img src="jane_smith.jpg" alt="Jane Smith">
+                <h3>Jane Smith - Vice President</h3>
+                <p>Jane organizes events and leads our USACO training sessions.</p>
+            </div>
+            <div class="officer-card">
+                <img src="alex_johnson.jpg" alt="Alex Johnson">
+                <h3>Alex Johnson - Event Coordinator</h3>
+                <p>Alex organizes and manages our tech webinars and workshops.</p>
+            </div>
+            <div class="officer-card">
+                <img src="maria_lopez.jpg" alt="Maria Lopez">
+                <h3>Maria Lopez - Outreach Coordinator</h3>
+                <p>Maria handles outreach, bringing in new students and partnerships.</p>
+            </div>
+        </div>
     </main>
 
     <footer>
         <p>&copy; 2025 Tampa Bay CS Club. All Rights Reserved.</p>
     </footer>
+
 </body>
 </html>
