--- a/events.html
+++ b/events.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <nav>
+            <div class="logo">
+                <a href="index.html">Tampa Bay CS Club</a>
+            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="officers.html">Officers</a></li>
@@ -21,27 +25,28 @@
     <main>
         <h1 class="center-heading">Our Events</h1>
 
-        <section class="event">
-            <h2>AI and Cryptography Workshop</h2>
-            <img src="ai_cryptography_workshop.jpg" alt="AI and Cryptography Workshop">
-            <p>This event was a two-day workshop where we explored the basics of artificial intelligence and cryptography. Students participated in hands-on coding challenges and learned from expert speakers in the field.</p>
-        </section>
-
-        <section class="event">
-            <h2>USACO Training Bootcamp</h2>
-            <img src="usaco_bootcamp.jpg" alt="USACO Training Bootcamp">
-            <p>Our USACO Bootcamp was a 3-week intensive training program designed to prepare students for the USA Computing Olympiad. We covered a wide range of topics, from dynamic programming to greedy algorithms, with expert mentors guiding the students.</p>
-        </section>
-
-        <section class="event">
-            <h2>Web Development Fundamentals</h2>
-            <img src="web_dev_workshop.jpg" alt="Web Development Workshop">
-            <p>In this workshop, we introduced students to the basics of web development. Topics covered included HTML, CSS, JavaScript, and how to build simple interactive websites. Students left with their own personal projects!</p>
-        </section>
+        <div class="event-container">
+            <div class="event-card">
+                <h3>AI and Cryptography Workshop</h3>
+                <img src="ai_cryptography_workshop.jpg" alt="AI Workshop">
+                <p>A two-day workshop exploring AI and cryptography with expert-led coding challenges.</p>
+            </div>
+            <div class="event-card">
+                <h3>USACO Training Bootcamp</h3>
+                <img src="usaco_bootcamp.jpg" alt="USACO Bootcamp">
+                <p>Our 3-week bootcamp prepares students for the USA Computing Olympiad with hands-on training.</p>
+            </div>
+            <div class="event-card">
+                <h3>Web Development Fundamentals</h3>
+                <img src="web_dev_workshop.jpg" alt="Web Development">
+                <p>Learn the basics of web development and create your first website in this interactive workshop.</p>
+            </div>
+        </div>
     </main>
 
     <footer>
         <p>&copy; 2025 Tampa Bay CS Club. All Rights Reserved.</p>
     </footer>
+
 </body>
 </html>
