--- a/registration.html
+++ b/registration.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <nav>
+            <div class="logo">
+                <a href="index.html">Tampa Bay CS Club</a>
+            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="officers.html">Officers</a></li>
@@ -20,13 +24,12 @@
 
     <main>
         <h1 class="center-heading">Register for Tampa Bay CS Club</h1>
-        <p style="text-align: center">Fill out the form below to join our club or register for an event.</p>
-
-        <iframe src="YOUR_GOOGLE_FORM_URL_HERE" width="640" height="850" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="YOUR_GOOGLE_FORM_URL_HERE" width="100%" height="850" frameborder="0">Loading…</iframe>
     </main>
 
     <footer>
         <p>&copy; 2025 Tampa Bay CS Club. All Rights Reserved.</p>
     </footer>
+
 </body>
 </html>
