--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <header>
         <nav>
-            <div class="logo">
-                <a href="index.html">Tampa Bay CS Club</a>
-            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="officers.html">Officers</a></li>
@@ -24,34 +20,36 @@
 
     <main>
         <section class="hero">
-            <h1>Empowering the Next Generation of Computer Scientists</h1>
-            <p>Welcome to Tampa Bay CS Club. Join us and explore the world of computer science.</p>
-            <a href="registration.html" class="cta-button">Join Now</a>
+            <h1>Welcome to Tampa Bay CS Club</h1>
+            <p>Empowering the next generation of computer scientists in the Tampa Bay area.</p>
         </section>
 
         <section class="mission">
             <h2>Our Mission</h2>
-            <p>At Tampa Bay CS Club, we provide opportunities for underprivileged students in the Tampa Bay area to explore the world of computer science. Through workshops, mentorship, and hands-on experiences, we equip students with the skills necessary to excel in a tech-driven world.</p>
+            <p>At Tampa Bay CS Club (TBCSC), our mission is to provide underprivileged students in the Tampa Bay area with opportunities to explore the world of computer science. We believe that technology has the power to change lives, and we aim to equip students with the skills to succeed in a tech-driven future. Through hands-on programming workshops, mentorship, and collaboration, we help students develop the technical skills they need to excel in both academics and their future careers. Our club offers specialized training in competitive programming and cutting-edge topics like AI and web development, ensuring that students are prepared for the challenges of tomorrow's tech landscape. Ultimately, we strive to create a diverse, inclusive community where students from all backgrounds can thrive and pursue careers in technology.</p>
         </section>
 
         <section class="programs">
-            <h2>What We Do</h2>
-            <div class="program-container">
-                <div class="program-card">
-                    <h3>USACO Training</h3>
-                    <p>We offer specialized training for the USA Computing Olympiad (USACO) to help students develop problem-solving skills and improve their coding ability.</p>
-                </div>
-                <div class="program-card">
-                    <h3>Tech Webinars</h3>
-                    <p>Our webinars feature industry experts discussing AI, cryptography, web development, and more, offering students a deeper understanding of cutting-edge technologies.</p>
-                </div>
+    <h2>What We Do</h2>
+    <div class="programs-container">
+        <div class="program-card">
+            <div class="program-box">
+                <h3>USACO Training</h3>
+                <p>We offer dedicated training for the USA Computing Olympiad (USACO), where students learn key problem-solving techniques and algorithms. Our program supports students from beginner to advanced levels, helping them improve their coding skills and prepare for competitive challenges. USACO participation builds both technical abilities and critical thinking, empowering students to pursue careers in tech.</p>
             </div>
-        </section>
+        </div>
+        <div class="program-card">
+            <div class="program-box">
+                <h3>Tech Webinars</h3>
+                <p>Our tech webinars cover a wide range of topics, including artificial intelligence (AI), cryptography, and basic web development. Led by industry professionals, these sessions provide valuable insights and practical knowledge of cutting-edge technologies. Students gain a deeper understanding of the tech world and learn how to apply these concepts in real-world scenarios.</p>
+            </div>
+        </div>
+    </div>
+</section>
     </main>
 
     <footer>
         <p>&copy; 2025 Tampa Bay CS Club. All Rights Reserved.</p>
     </footer>
-
 </body>
 </html>
