--- a/officers.html
+++ b/officers.html
@@ -1,54 +1,202 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tampa Bay CS Club - Officers</title>
+    <title>Officers - Tampa Bay CS Club</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="logo">
+                <span class="logo-text">TBCSC</span>
+            </div>
+            <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="officers.html">Officers</a></li>
+                <li><a href="officers.html" class="active">Officers</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="registration.html">Registration</a></li>
+                <li><a href="registration.html">Register</a></li>
             </ul>
-        </nav>
-    </header>
+            <button class="mobile-menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+    </nav>
 
-    <main>
-        <h1 class="center-heading">Meet Our Officers</h1>
-        
-        <section class="officer">
-            <h2>John Doe - President</h2>
-            <img src="john_doe.jpg" alt="John Doe">
-            <p>John is the President of the Tampa Bay CS Club, responsible for overseeing all club activities, representing the club at events, and ensuring that we stay aligned with our mission. He has a passion for AI and loves to teach students about machine learning.</p>
-        </section>
+    <section class="page-hero">
+        <div class="container">
+            <h1>Meet Our Team</h1>
+            <p>Dedicated leaders committed to empowering the next generation</p>
+        </div>
+    </section>
 
-        <section class="officer">
-            <h2>Jane Smith - Vice President</h2>
-            <img src="jane_smith.jpg" alt="Jane Smith">
-            <p>Jane serves as the Vice President and focuses on organizing events, leading the USACO training sessions, and providing support to the other officers. She’s passionate about cryptography and enjoys mentoring students in competitive programming.</p>
-        </section>
+    <section class="officers">
+        <div class="container">
+            <div class="officers-grid">
+                <div class="officer-card">
+                    <div class="officer-image">
+                        <div class="placeholder-avatar">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                                <circle cx="12" cy="7" r="4"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="officer-info">
+                        <h3>President</h3>
+                        <p class="officer-name">Your Name</p>
+                        <p class="officer-bio">Leading our mission to make computer science education accessible to all students in the Tampa Bay area.</p>
+                        <div class="officer-contact">
+                            <a href="mailto:president@tampabaycsc.org">Contact</a>
+                        </div>
+                    </div>
+                </div>
 
-        <section class="officer">
-            <h2>Alex Johnson - Event Coordinator</h2>
-            <img src="alex_johnson.jpg" alt="Alex Johnson">
-            <p>Alex is the Event Coordinator and handles all aspects of our webinars and workshops. From speaker outreach to scheduling and event promotion, Alex ensures that all of our tech webinars run smoothly.</p>
-        </section>
+                <div class="officer-card">
+                    <div class="officer-image">
+                        <div class="placeholder-avatar">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                                <circle cx="12" cy="7" r="4"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="officer-info">
+                        <h3>Vice President</h3>
+                        <p class="officer-name">Your Name</p>
+                        <p class="officer-bio">Supporting club operations and helping coordinate our programs and events throughout the year.</p>
+                        <div class="officer-contact">
+                            <a href="mailto:vp@tampabaycsc.org">Contact</a>
+                        </div>
+                    </div>
+                </div>
 
-        <section class="officer">
-            <h2>Maria Lopez - Outreach Coordinator</h2>
-            <img src="maria_lopez.jpg" alt="Maria Lopez">
-            <p>Maria is the Outreach Coordinator, focused on building relationships with local schools, tech organizations, and other clubs. She’s instrumental in bringing new students into the club and expanding our network.</p>
-        </section>
-    </main>
+                <div class="officer-card">
+                    <div class="officer-image">
+                        <div class="placeholder-avatar">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                                <circle cx="12" cy="7" r="4"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="officer-info">
+                        <h3>USACO Lead</h3>
+                        <p class="officer-name">Your Name</p>
+                        <p class="officer-bio">Designing and leading competitive programming curriculum to prepare students for USACO challenges.</p>
+                        <div class="officer-contact">
+                            <a href="mailto:usaco@tampabaycsc.org">Contact</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="officer-card">
+                    <div class="officer-image">
+                        <div class="placeholder-avatar">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                                <circle cx="12" cy="7" r="4"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="officer-info">
+                        <h3>Events Coordinator</h3>
+                        <p class="officer-name">Your Name</p>
+                        <p class="officer-bio">Organizing workshops, webinars, and community events to engage and inspire our members.</p>
+                        <div class="officer-contact">
+                            <a href="mailto:events@tampabaycsc.org">Contact</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="officer-card">
+                    <div class="officer-image">
+                        <div class="placeholder-avatar">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                                <circle cx="12" cy="7" r="4"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="officer-info">
+                        <h3>Outreach Director</h3>
+                        <p class="officer-name">Your Name</p>
+                        <p class="officer-bio">Building partnerships with schools and organizations to expand our reach in the community.</p>
+                        <div class="officer-contact">
+                            <a href="mailto:outreach@tampabaycsc.org">Contact</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="officer-card">
+                    <div class="officer-image">
+                        <div class="placeholder-avatar">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                                <circle cx="12" cy="7" r="4"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="officer-info">
+                        <h3>Technology Officer</h3>
+                        <p class="officer-name">Your Name</p>
+                        <p class="officer-bio">Managing our digital infrastructure and developing tools to support our educational mission.</p>
+                        <div class="officer-contact">
+                            <a href="mailto:tech@tampabaycsc.org">Contact</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="join-team">
+        <div class="container">
+            <h2>Interested in Leading?</h2>
+            <p>We're always looking for passionate individuals to join our leadership team</p>
+            <a href="mailto:info@tampabaycsc.org" class="btn btn-primary">Get Involved</a>
+        </div>
+    </section>
 
     <footer>
-        <p>&copy; 2025 Tampa Bay CS Club. All Rights Reserved.</p>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h4>Tampa Bay CS Club</h4>
+                    <p>Empowering the next generation of computer scientists</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="officers.html">Officers</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="registration.html">Register</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Contact</h4>
+                    <p>Tampa Bay Area, Florida</p>
+                    <p>info@tampabaycsc.org</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Tampa Bay CS Club. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
+
+    <script>
+        const mobileToggle = document.querySelector('.mobile-menu-toggle');
+        const navMenu = document.querySelector('.nav-menu');
+        
+        mobileToggle.addEventListener('click', () => {
+            navMenu.classList.toggle('active');
+            mobileToggle.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
