--- a/events.html
+++ b/events.html
@@ -28,8 +28,8 @@
 
     <section class="page-hero">
         <div class="container">
-            <h1>Upcoming Events</h1>
-            <p>Join us for workshops, webinars, and community gatherings</p>
+            <h1>Past Events</h1>
+            <p>Celebrating our workshops, webinars, and community gatherings</p>
         </div>
     </section>
 
@@ -46,7 +46,7 @@
                 <div class="event-card" data-category="workshop">
                     <div class="event-header">
                         <span class="event-badge workshop">Workshop</span>
-                        <span class="event-date">Oct 15, 2025</span>
+                        <span class="event-date">Sept 15, 2025</span>
                     </div>
                     <h3>Python Programming Basics</h3>
                     <p class="event-time">
@@ -63,14 +63,16 @@
                         </svg>
                         Virtual Event
                     </p>
-                    <p class="event-description">Learn the fundamentals of Python programming in this beginner-friendly workshop. Perfect for students just starting their coding journey.</p>
-                    <a href="registration.html" class="btn btn-small">Register</a>
+                    <p class="event-description">Students learned the fundamentals of Python programming in this beginner-friendly workshop. Covered variables, loops, conditionals, and basic data structures.</p>
+                    <div class="event-stats">
+                        <span>45 Attendees</span>
+                    </div>
                 </div>
 
                 <div class="event-card" data-category="webinar">
                     <div class="event-header">
                         <span class="event-badge webinar">Webinar</span>
-                        <span class="event-date">Oct 22, 2025</span>
+                        <span class="event-date">Sept 8, 2025</span>
                     </div>
                     <h3>Introduction to AI & Machine Learning</h3>
                     <p class="event-time">
@@ -87,14 +89,16 @@
                         </svg>
                         Virtual Event
                     </p>
-                    <p class="event-description">Join industry professionals as they explore the fascinating world of artificial intelligence and its real-world applications.</p>
-                    <a href="registration.html" class="btn btn-small">Register</a>
+                    <p class="event-description">Industry professionals explored the fascinating world of artificial intelligence and its real-world applications. Students learned about neural networks, training models, and ethical AI considerations.</p>
+                    <div class="event-stats">
+                        <span>62 Attendees</span>
+                    </div>
                 </div>
 
                 <div class="event-card" data-category="competition">
                     <div class="event-header">
                         <span class="event-badge competition">Competition</span>
-                        <span class="event-date">Nov 5, 2025</span>
+                        <span class="event-date">Aug 20, 2025</span>
                     </div>
                     <h3>USACO Practice Contest</h3>
                     <p class="event-time">
@@ -111,14 +115,16 @@
                         </svg>
                         Virtual Event
                     </p>
-                    <p class="event-description">Test your skills in a timed competitive programming contest designed to prepare students for the USA Computing Olympiad.</p>
-                    <a href="registration.html" class="btn btn-small">Register</a>
+                    <p class="event-description">Students tested their skills in a timed competitive programming contest with problems ranging from Bronze to Silver level. Great practice for the upcoming USACO season!</p>
+                    <div class="event-stats">
+                        <span>38 Participants</span>
+                    </div>
                 </div>
 
                 <div class="event-card" data-category="workshop">
                     <div class="event-header">
                         <span class="event-badge workshop">Workshop</span>
-                        <span class="event-date">Nov 12, 2025</span>
+                        <span class="event-date">Aug 12, 2025</span>
                     </div>
                     <h3>Web Development with HTML/CSS</h3>
                     <p class="event-time">
@@ -135,14 +141,16 @@
                         </svg>
                         Virtual Event
                     </p>
-                    <p class="event-description">Build your first website from scratch! Learn HTML structure and CSS styling to create beautiful web pages.</p>
-                    <a href="registration.html" class="btn btn-small">Register</a>
+                    <p class="event-description">Students built their first websites from scratch, learning HTML structure and CSS styling. Each participant created a personal portfolio page by the end of the session.</p>
+                    <div class="event-stats">
+                        <span>51 Attendees</span>
+                    </div>
                 </div>
 
                 <div class="event-card" data-category="webinar">
                     <div class="event-header">
                         <span class="event-badge webinar">Webinar</span>
-                        <span class="event-date">Nov 19, 2025</span>
+                        <span class="event-date">July 29, 2025</span>
                     </div>
                     <h3>Cryptography Fundamentals</h3>
                     <p class="event-time">
@@ -159,14 +167,16 @@
                         </svg>
                         Virtual Event
                     </p>
-                    <p class="event-description">Discover the basics of encryption, decryption, and modern cryptographic techniques used to secure digital communications.</p>
-                    <a href="registration.html" class="btn btn-small">Register</a>
+                    <p class="event-description">Discovered the basics of encryption, decryption, and modern cryptographic techniques used to secure digital communications. Hands-on activities with Caesar ciphers and RSA encryption.</p>
+                    <div class="event-stats">
+                        <span>47 Attendees</span>
+                    </div>
                 </div>
 
                 <div class="event-card" data-category="workshop">
                     <div class="event-header">
                         <span class="event-badge workshop">Workshop</span>
-                        <span class="event-date">Dec 3, 2025</span>
+                        <span class="event-date">July 15, 2025</span>
                     </div>
                     <h3>Data Structures & Algorithms</h3>
                     <p class="event-time">
@@ -183,8 +193,62 @@
                         </svg>
                         Virtual Event
                     </p>
-                    <p class="event-description">Deep dive into essential data structures and algorithms that form the foundation of computer science and competitive programming.</p>
-                    <a href="registration.html" class="btn btn-small">Register</a>
+                    <p class="event-description">Deep dive into essential data structures including arrays, linked lists, stacks, queues, and trees. Students implemented common algorithms and analyzed their time complexity.</p>
+                    <div class="event-stats">
+                        <span>42 Attendees</span>
+                    </div>
+                </div>
+
+                <div class="event-card" data-category="workshop">
+                    <div class="event-header">
+                        <span class="event-badge workshop">Workshop</span>
+                        <span class="event-date">June 28, 2025</span>
+                    </div>
+                    <h3>Introduction to Java Programming</h3>
+                    <p class="event-time">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="10"/>
+                            <polyline points="12 6 12 12 16 14"/>
+                        </svg>
+                        6:00 PM - 8:00 PM EST
+                    </p>
+                    <p class="event-location">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                            <circle cx="12" cy="10" r="3"/>
+                        </svg>
+                        Virtual Event
+                    </p>
+                    <p class="event-description">Students learned Java fundamentals including object-oriented programming concepts, classes, methods, and basic syntax. Perfect preparation for AP Computer Science A.</p>
+                    <div class="event-stats">
+                        <span>55 Attendees</span>
+                    </div>
+                </div>
+
+                <div class="event-card" data-category="competition">
+                    <div class="event-header">
+                        <span class="event-badge competition">Competition</span>
+                        <span class="event-date">June 10, 2025</span>
+                    </div>
+                    <h3>Summer Coding Challenge</h3>
+                    <p class="event-time">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="10"/>
+                            <polyline points="12 6 12 12 16 14"/>
+                        </svg>
+                        9:00 AM - 1:00 PM EST
+                    </p>
+                    <p class="event-location">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                            <circle cx="12" cy="10" r="3"/>
+                        </svg>
+                        Virtual Event
+                    </p>
+                    <p class="event-description">Our largest competition of the summer! Students competed in teams to solve algorithmic challenges and build creative coding projects. Winners received prizes and certificates.</p>
+                    <div class="event-stats">
+                        <span>73 Participants</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -192,9 +256,9 @@
 
     <section class="calendar-section">
         <div class="container">
-            <h2>Stay Updated</h2>
-            <p>Subscribe to our calendar to never miss an event</p>
-            <a href="mailto:info@tampabaycsc.org?subject=Calendar Subscription" class="btn btn-secondary">Subscribe to Calendar</a>
+            <h2>Want to Join Future Events?</h2>
+            <p>Register now to receive notifications about upcoming workshops and webinars</p>
+            <a href="registration.html" class="btn btn-primary">Register for Membership</a>
         </div>
     </section>
 
@@ -247,10 +311,13 @@
                 
                 eventCards.forEach(card => {
                     if (filter === 'all' || card.dataset.category === filter) {
-                    card.style.display = 'block';
-                } else {
-                    card.style.display = 'none';
-                }
+                        card.style.display = 'block';
+                    } else {
+                        card.style.display = 'none';
+                    }
+                });
             });
         });
-    });
+    </script>
+</body>
+</html>
