--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <span class="logo-text">TBCSC</span>
+                <img src="logo.png" alt="Tampa Bay Computer Science Club" class="logo-img">
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="active">Home</a></li>
