--- a/registration.html
+++ b/registration.html
@@ -117,7 +117,7 @@
                     <div class="google-form-embed">
                         <!-- Replace the src URL below with your actual Google Form embed URL -->
                         <iframe 
-                            src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform?embedded=true" 
+                            src="https://forms.gle/bkgWraPYgtJYs8D78" 
                             width="100%" 
                             height="800" 
                             frameborder="0" 
