--- a/officers.html
+++ b/officers.html
@@ -38,12 +38,7 @@
             <div class="officers-grid">
                 <div class="officer-card">
                     <div class="officer-image">
-                        <div class="placeholder-avatar">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
-                                <circle cx="12" cy="7" r="4"/>
-                            </svg>
-                        </div>
+                        <img src="images/President.jpg" alt="President" class="officer-photo">
                     </div>
                     <div class="officer-info">
                         <h3>President</h3>
@@ -54,12 +49,7 @@
 
                 <div class="officer-card">
                     <div class="officer-image">
-                        <div class="placeholder-avatar">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
-                                <circle cx="12" cy="7" r="4"/>
-                            </svg>
-                        </div>
+                        <img src="images/Vice President.jpg" alt="Vice President" class="officer-photo">
                     </div>
                     <div class="officer-info">
                         <h3>Vice President</h3>
@@ -70,12 +60,7 @@
 
                 <div class="officer-card">
                     <div class="officer-image">
-                        <div class="placeholder-avatar">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
-                                <circle cx="12" cy="7" r="4"/>
-                            </svg>
-                        </div>
+                        <img src="images/EventCoordinator.png" alt="Events Coordinator" class="officer-photo">
                     </div>
                     <div class="officer-info">
                         <h3>Events Coordinator</h3>
