--- a/officers.html
+++ b/officers.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="officer-info">
                         <h3>President</h3>
-                        <p class="officer-name">Your Name</p>
+                        <p class="officer-name">Aaryan Vaishya</p>
                         <p class="officer-bio">Leading our mission to make computer science education accessible to all students in the Tampa Bay area.</p>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="officer-info">
                         <h3>Vice President</h3>
-                        <p class="officer-name">Your Name</p>
+                        <p class="officer-name">Shreyas Penugonda</p>
                         <p class="officer-bio">Supporting club operations and helping coordinate our programs and events throughout the year.</p>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="officer-info">
                         <h3>Events Coordinator</h3>
-                        <p class="officer-name">Your Name</p>
+                        <p class="officer-name">Rakesh Reddy</p>
                         <p class="officer-bio">Organizing workshops, webinars, and community events to engage and inspire our members.</p>
                     </div>
                 </div>
