--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1 class="hero-title">Empowering the Next Generation</h1>
-            <p class="hero-subtitle">Building computer science skills in Tampa Bay's underprivileged youth</p>
+            <p class="hero-subtitle">Fostering computer science education and innovation across Tampa Bay</p>
             <div class="hero-buttons">
                 <a href="registration.html" class="btn btn-primary">Join Us</a>
                 <a href="events.html" class="btn btn-secondary">View Events</a>
@@ -61,7 +61,7 @@
                 <div class="underline"></div>
             </div>
             <p class="mission-text">
-                At Tampa Bay CS Club (TBCSC), our mission is to provide underprivileged students in the Tampa Bay area with opportunities to explore the world of computer science. We believe that technology has the power to change lives, and we aim to equip students with the skills to succeed in a tech-driven future. Through hands-on programming workshops, mentorship, and collaboration, we help students develop the technical skills they need to excel in both academics and their future careers.
+               At Tampa Bay CS Club (TBCSC), our mission is to cultivate a thriving computer science community throughout the Tampa Bay area. We believe that technology has the power to change lives, and we aim to equip students with the skills to succeed in a tech-driven future. Through hands-on programming workshops, mentorship, and collaboration, we help students develop the technical skills they need to excel in both academics and their future careers.
             </p>
         </div>
     </section>
@@ -93,7 +93,7 @@
                         </svg>
                     </div>
                     <h3>Tech Webinars</h3>
-                    <p>Our tech webinars cover a wide range of topics, including artificial intelligence (AI), cryptography, and basic web development. Led by industry professionals, these sessions provide valuable insights and practical knowledge of cutting-edge technologies.</p>
+                    <p>Our tech webinars cover a wide range of topics, including artificial intelligence (AI), cryptography, and basic web development. These sessions provide valuable insights and practical knowledge of cutting-edge technologies.</p>
                 </div>
                 <div class="program-card">
                     <div class="program-icon">
@@ -105,7 +105,7 @@
                         </svg>
                     </div>
                     <h3>Mentorship</h3>
-                    <p>Students receive one-on-one guidance from experienced mentors who provide personalized support, career advice, and technical expertise to help them reach their full potential in the field of computer science.</p>
+                    <p>Club members receive guidance from experienced peers who provide personalized support, study resources, and technical expertise to help them reach their full potential in the field of computer science.</p>
                 </div>
             </div>
         </div>
