--- a/events.html
+++ b/events.html
@@ -109,6 +109,16 @@
                         Local Library
                     </p>
                     <p class="event-description">Club officers guided students through bronze-level competitive programming problems. We covered simulation, complete search, and basic greedy algorithms.</p>
+                    <div class="event-resources">
+                        <a href="presentations/USACO_Bronze_Training.pptx" download class="resource-link">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                                <polyline points="7 10 12 15 17 10"/>
+                                <line x1="12" y1="15" x2="12" y2="3"/>
+                            </svg>
+                            Download Presentation
+                        </a>
+                    </div>
                 </div>
 
                 <div class="event-card">
@@ -132,6 +142,16 @@
                         Virtual Event
                     </p>
                     <p class="event-description">Our officers presented an introduction to AI and machine learning concepts. We explored basic neural networks and tried out some free AI tools together.</p>
+                    <div class="event-resources">
+                        <a href="presentations/AI_Machine_Learning.pptx" download class="resource-link">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                                <polyline points="7 10 12 15 17 10"/>
+                                <line x1="12" y1="15" x2="12" y2="3"/>
+                            </svg>
+                            Download Presentation
+                        </a>
+                    </div>
                 </div>
 
                 <div class="event-card">
@@ -155,6 +175,16 @@
                         Local Library
                     </p>
                     <p class="event-description">Students learned HTML and CSS basics in our library meeting room. Everyone followed along and built their first simple webpage using free code editors.</p>
+                    <div class="event-resources">
+                        <a href="presentations/Web_Development_HTML_CSS.pptx" download class="resource-link">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                                <polyline points="7 10 12 15 17 10"/>
+                                <line x1="12" y1="15" x2="12" y2="3"/>
+                            </svg>
+                            Download Presentation
+                        </a>
+                    </div>
                 </div>
 
                 <div class="event-card">
@@ -201,6 +231,24 @@
                         Local Library
                     </p>
                     <p class="event-description">Officers walked students through Java basics including variables, loops, and methods. Great for anyone preparing for AP Computer Science A or getting started with programming.</p>
+                    <div class="event-resources">
+                        <a href="presentations/Java_Programming_Part1.pptx" download class="resource-link">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                                <polyline points="7 10 12 15 17 10"/>
+                                <line x1="12" y1="15" x2="12" y2="3"/>
+                            </svg>
+                            Download Part 1
+                        </a>
+                        <a href="presentations/Java_Programming_Part2.pptx" download class="resource-link">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                                <polyline points="7 10 12 15 17 10"/>
+                                <line x1="12" y1="15" x2="12" y2="3"/>
+                            </svg>
+                            Download Part 2
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
