--- a/events.html
+++ b/events.html
@@ -110,7 +110,7 @@
                     </p>
                     <p class="event-description">Club officers guided students through bronze-level competitive programming problems. We covered simulation, complete search, and basic greedy algorithms.</p>
                     <div class="event-resources">
-                        <a href="presentations/USACO_Bronze_Training.pptx" download class="resource-link">
+                        <a href="presentations/TBCSC_USACO_Bronze.pptx" download class="resource-link">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                                 <polyline points="7 10 12 15 17 10"/>
@@ -143,7 +143,7 @@
                     </p>
                     <p class="event-description">Our officers presented an introduction to AI and machine learning concepts. We explored basic neural networks and tried out some free AI tools together.</p>
                     <div class="event-resources">
-                        <a href="presentations/AI_Machine_Learning.pptx" download class="resource-link">
+                        <a href="presentations/TBCSC_Intro_to_AI_and_ML_presentation.pdf" download class="resource-link">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                                 <polyline points="7 10 12 15 17 10"/>
@@ -176,13 +176,21 @@
                     </p>
                     <p class="event-description">Students learned HTML and CSS basics in our library meeting room. Everyone followed along and built their first simple webpage using free code editors.</p>
                     <div class="event-resources">
-                        <a href="presentations/Web_Development_HTML_CSS.pptx" download class="resource-link">
+                        <a href="presentations/TBCSC_Intro_to_Web_Development.pdf" download class="resource-link">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                                 <polyline points="7 10 12 15 17 10"/>
                                 <line x1="12" y1="15" x2="12" y2="3"/>
                             </svg>
                             Download Presentation
+                        </a>
+                        <a href="presentations/TBCSC_Intermediate_Web_Development.pdf" download class="resource-link">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                                <polyline points="7 10 12 15 17 10"/>
+                                <line x1="12" y1="15" x2="12" y2="3"/>
+                            </svg>
+                            Download Part 1
                         </a>
                     </div>
                 </div>
@@ -232,15 +240,7 @@
                     </p>
                     <p class="event-description">Officers walked students through Java basics including variables, loops, and methods. Great for anyone preparing for AP Computer Science A or getting started with programming.</p>
                     <div class="event-resources">
-                        <a href="presentations/Java_Programming_Part1.pptx" download class="resource-link">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
-                                <polyline points="7 10 12 15 17 10"/>
-                                <line x1="12" y1="15" x2="12" y2="3"/>
-                            </svg>
-                            Download Part 1
-                        </a>
-                        <a href="presentations/Java_Programming_Part2.pptx" download class="resource-link">
+                        <a href="presentations/TBCSC_Intro_to_Java.pdf" download class="resource-link">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                                 <polyline points="7 10 12 15 17 10"/>
